--- a/style.css
+++ b/style.css
@@ -194,8 +194,9 @@ header {
 }
 
  .section3 {
-  background-image: url(img3.png.jpg);
+  background-image: url(img6.png.jpg);
   padding-bottom: 150px;
+  padding: 320px;
 }
 
  .section4 {
