--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header {
 .hero-image {
   width: 35%; 
   height: 405px; 
-  background-image: url('img5.png.jpg');
+  background-image: url('img4.png.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -147,7 +147,7 @@ header {
 
 .tagline {
   font-size: 1.3rem;
-  color: white;
+  color: #4CAF50;
   max-width: 500px;
 }
 
